feat: Add simple status endpoint
